--- a/src/Webviews/airline-view/style/style.scss
+++ b/src/Webviews/airline-view/style/style.scss
@@ -2,7 +2,7 @@
 @use '../../_Shared/_fonts';
 
 @use '../../_Shared/_base';
-@use '_header';
+@use '../../_Shared/_header';
 @use '_icons';
 @use '_section';
 @use '_grid';
