--- a/src/Webviews/_Shared/_table.scss
+++ b/src/Webviews/_Shared/_table.scss
@@ -8,6 +8,16 @@ table {
 	width: 100%;
 	$cell-padding: 0.5rem 1rem;
 
+	th,
+	td {
+		&.align-right {
+			text-align: right;
+		}
+		&.align-center {
+			text-align: center;
+		}
+	}
+
 	th {
 		padding: $cell-padding;
 		font-family: fonts.$sans-serif-secondary;
@@ -56,7 +66,9 @@ table {
 
 			&:first-child {
 				border-radius: var(--border-radius) 0 0 var(--border-radius);
-				padding-right: 3em;
+				&:not(.align-right) {
+					padding-right: 3em;
+				}
 			}
 
 			&:last-child {
