--- a/src/Webviews/compare-fleet/style/style.scss
+++ b/src/Webviews/compare-fleet/style/style.scss
@@ -2,6 +2,7 @@
 @use '../../_Shared/_fonts';
 
 @use '../../_Shared/_base';
-@use '_header';
+@use '../../_Shared/_header';
+@use '_header_compare-fleet';
 @use '../../_Shared/_table';
-@use '_table2';
+@use '_table_compare-fleet';
